// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FocusToggle > renders focus enter link in write mode 1`] = `
<div>
  <a
    aria-label="Enter focus mode"
    class="inline-flex items-center gap-1.5 rounded-md px-2 py-1 font-mono text-[10px] uppercase tracking-wider text-ink-3 hover:bg-paper-2 hover:text-ink"
    data-discover="true"
    href="/s/s1/d/d1?focus=1"
    title="Focus (⌘\\)"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-maximize2 lucide-maximize-2 h-3 w-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 3h6v6"
      />
      <path
        d="m21 3-7 7"
      />
      <path
        d="m3 21 7-7"
      />
      <path
        d="M9 21H3v-6"
      />
    </svg>
    FOCUS
  </a>
</div>
`;

exports[`FocusToggle > renders icon-only exit-focus link when focused 1`] = `
<div>
  <a
    aria-label="Exit focus mode"
    class="inline-flex h-7 w-7 items-center justify-center rounded-md text-ink-3 hover:bg-paper-2 hover:text-ink"
    data-discover="true"
    data-state="closed"
    href="/s/s1/d/d1"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-minimize2 lucide-minimize-2 h-3.5 w-3.5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m14 10 7-7"
      />
      <path
        d="M20 10h-6V4"
      />
      <path
        d="m3 21 7-7"
      />
      <path
        d="M4 14h6v6"
      />
    </svg>
  </a>
</div>
`;

exports[`FocusToggle > returns null in read mode 1`] = `<div />`;

exports[`ModeTabs > hides per-doc tabs when docId is null 1`] = `
<div>
  <nav
    class="inline-flex items-center font-mono text-[11px] gap-4"
  >
    <a
      class="pb-0.5 transition-colors border-b border-ink font-medium text-ink"
      data-discover="true"
      href="/s/s1/dump"
    >
      space
    </a>
  </nav>
</div>
`;

exports[`ModeTabs > renders icon-only tabs with tooltips in focus mode 1`] = `
<div>
  <nav
    class="inline-flex items-center font-mono text-[11px] gap-1"
  >
    <a
      aria-current="page"
      aria-label="write"
      class="inline-flex h-7 w-7 items-center justify-center rounded-md transition-colors text-ink"
      data-discover="true"
      data-state="closed"
      href="/s/s1/d/d1?focus=1"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-pencil h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
        />
        <path
          d="m15 5 4 4"
        />
      </svg>
    </a>
    <a
      aria-label="read"
      class="inline-flex h-7 w-7 items-center justify-center rounded-md transition-colors text-ink-4 hover:bg-paper-2 hover:text-ink-2"
      data-discover="true"
      data-state="closed"
      href="/s/s1/d/d1/read?focus=1"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-book-open h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 7v14"
        />
        <path
          d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
        />
      </svg>
    </a>
    <a
      aria-label="split"
      class="h-7 w-7 items-center justify-center rounded-md transition-colors text-ink-4 hover:bg-paper-2 hover:text-ink-2 hidden md:inline-flex"
      data-discover="true"
      data-state="closed"
      href="/s/s1/d/d1/split?focus=1"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-columns2 lucide-columns-2 h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="18"
          rx="2"
          width="18"
          x="3"
          y="3"
        />
        <path
          d="M12 3v18"
        />
      </svg>
    </a>
    <a
      aria-label="space"
      class="inline-flex h-7 w-7 items-center justify-center rounded-md transition-colors text-ink-4 hover:bg-paper-2 hover:text-ink-2"
      data-discover="true"
      data-state="closed"
      href="/s/s1/dump?focus=1"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-network h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="6"
          rx="1"
          width="6"
          x="16"
          y="16"
        />
        <rect
          height="6"
          rx="1"
          width="6"
          x="2"
          y="16"
        />
        <rect
          height="6"
          rx="1"
          width="6"
          x="9"
          y="2"
        />
        <path
          d="M5 16v-3a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3"
        />
        <path
          d="M12 12V8"
        />
      </svg>
    </a>
  </nav>
</div>
`;

exports[`ModeTabs > renders write/read/split/space tabs with active state 1`] = `
<div>
  <nav
    class="inline-flex items-center font-mono text-[11px] gap-4"
  >
    <a
      class="pb-0.5 transition-colors border-b border-ink font-medium text-ink"
      data-discover="true"
      href="/s/s1/d/d1"
    >
      write
    </a>
    <a
      class="pb-0.5 transition-colors text-ink-4 hover:text-ink-2"
      data-discover="true"
      href="/s/s1/d/d1/read"
    >
      read
    </a>
    <a
      class="pb-0.5 transition-colors text-ink-4 hover:text-ink-2 hidden md:inline"
      data-discover="true"
      href="/s/s1/d/d1/split"
    >
      split
    </a>
    <a
      class="pb-0.5 transition-colors text-ink-4 hover:text-ink-2"
      data-discover="true"
      href="/s/s1/dump"
    >
      space
    </a>
  </nav>
</div>
`;
